--- a/component/src/main/res/values/colors.xml
+++ b/component/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="blue">#3c98e3</color>
     <color name="green">#5abf98</color>
 
+    <color name="transparent">#00000000</color>
+
     <color name="text_color_black">#232323</color>
     <color name="text_color_hint">#cccccc</color>
     <color name="text_default">#767676</color>
